test/src/e2e_vm_tests/test_programs/should_fail/multiple_config_blocks_one_lib/src/lib.sw
library lib;

configurable {
    X: u64 = 55,
}
